--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Environments
-.env
+.env.local
 .venv
 env/
 venv/
@@ -51,3 +51,5 @@ venv.bak/
 test_*.png
 test_image_tag.py
 test_tools.py
+__pycache__/llm_generator.cpython-310.pyc
+__pycache__/llm_generator.cpython-310.pyc
